css updates, thumbnails generation, login, read-only for guests, fullscreen on carousel view, keyboard controls on carousel view, reduced exection of db data fetch on load